# ai-code-reviewer-team1

./: .gitignore  .pre-commit-config.yaml  AI_REVIEW_ENGINE.md  HOW_TO_USE_SEVERITY.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  USAGE.md  VALIDATION_METRICS.md  ai_code_reviewer.py  aicr.py  cli_ai_review.py  cli_docstring.py  cli_evaluation.py  cli_metrics.py  demo_ai_review.py  demo_docstring.py  demo_evaluation.py  demo_metrics.py  example_code_with_issues.py  pre-commit  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  streamlit_review_ui.py  test_severity_detection.py
